// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPatches basically works 1`] = `
[
  {
    "indexMap": [
      1,
      2,
      -1,
    ],
    "op": "resortArray",
    "path": [
      "foo",
    ],
  },
  {
    "op": "set",
    "path": [
      "foo",
      2,
    ],
    "value": 3,
  },
  {
    "op": "set",
    "path": [
      "bar",
      "baz",
    ],
    "value": "baz",
  },
  {
    "op": "set",
    "path": [
      "bar",
      "newest",
    ],
    "value": "newest",
  },
  {
    "op": "delete",
    "path": [
      "bar",
      "deleted",
    ],
  },
]
`;

exports[`getPatches basically works 2`] = `
[
  {
    "op": "set",
    "path": [
      "bar",
      "deleted",
    ],
    "value": "I am removed",
  },
  {
    "op": "delete",
    "path": [
      "bar",
      "newest",
    ],
  },
  {
    "op": "set",
    "path": [
      "bar",
      "baz",
    ],
    "value": "old baz",
  },
  {
    "indexMap": [
      -1,
      0,
      1,
    ],
    "op": "resortArray",
    "path": [
      "foo",
    ],
  },
  {
    "op": "set",
    "path": [
      "foo",
      0,
    ],
    "value": 0,
  },
]
`;

exports[`getPatches resorted objects 1`] = `
[
  {
    "indexMap": [
      -1,
      2,
      1,
      0,
    ],
    "op": "resortArray",
    "path": [],
  },
  {
    "op": "set",
    "path": [
      0,
    ],
    "value": {
      "x": 0,
    },
  },
  {
    "op": "set",
    "path": [
      3,
      "x",
    ],
    "value": 3,
  },
]
`;

exports[`getPatches resorted objects 2`] = `
[
  {
    "op": "set",
    "path": [
      3,
      "x",
    ],
    "value": -3,
  },
  {
    "indexMap": [
      3,
      2,
      1,
      -1,
    ],
    "op": "resortArray",
    "path": [],
  },
  {
    "op": "set",
    "path": [
      3,
    ],
    "value": {
      "y": 555,
    },
  },
]
`;

exports[`getPatches whole replaced 1`] = `
[
  {
    "op": "set",
    "path": [],
    "value": {
      "foo": [
        1,
        2,
        3,
      ],
    },
  },
]
`;

exports[`getPatches whole replaced 2`] = `
[
  {
    "op": "set",
    "path": [],
    "value": {
      "hey": "yo",
    },
  },
]
`;
